recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:4: error: identifier expected but ')' found.
    droite(90.)
              ^